Linear Regression Analyis using Stock data

--- a/Lineardata.ipynb
+++ b/Lineardata.ipynb
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "# Flatten MultiIndex columns\n",
+    "#Flatten MultiIndex columns\n",
     "stock_data.columns = ['_'.join(col).strip() if isinstance(col, tuple) else col for col in stock_data.columns]\n",
     "\n",
     "print(stock_data.head())  # Check if column names are now correct\n"
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check for missing columns\n",
+    "#Check for missing columns and drop null values\n",
     "missing_cols = [col for col in features + [target] if col not in stock_data.columns]\n",
     "if missing_cols:\n",
     "    print(f\"Error: Missing columns in stock_data: {missing_cols}\")\n",
@@ -131,14 +131,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " # Train/test split\n",
+    " #Train/test split, testing dataset with 20 percent\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Train model\n",
+    "#Train model\n",
     "model = LinearRegression()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# Predict\n",
+    "#Predict\n",
     "y_pred = model.predict(X_test)"
    ]
   },
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "# Evaluate model metrics\n",
+    "#Evaluate model metrics\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "print(f'Mean Squared Error: {mse:.2f}')\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "# Plot actual vs predicted prices over time\n",
+    "#Plot actual vs predicted prices over time\n",
     "plt.figure(figsize=(12,6))\n",
     "plt.plot(data['Date'], data[target], label=\"Actual Closing Price\", color='blue', alpha=0.6)\n",
     "plt.scatter(X_test['Days'], y_pred, label=\"Predicted Closing Price\", color='red', alpha=0.5)\n",
@@ -224,7 +224,7 @@
     }
    ],
    "source": [
-    "# ✅ NEW: Predict Closing Price for a User-Entered Date\n",
+    "#Predict Closing Price for a User-Entered Input Date \n",
     "user_date = input(\"\\nEnter a date (YYYY-MM-DD) to predict the closing price: \")\n",
     "try:\n",
     "    user_date = pd.to_datetime(user_date)\n",
